if (BOARD)
    add_executable(lab1.elf main.c)
    target_link_libraries(lab1.elf supportFiles)
else()
    add_executable(lab1_emu main.c)
    target_link_libraries(lab1_emu supportFiles ${CMAKE_SOURCE_DIR}/emulator/libemu.a Qt5Widgets Qt5Gui Qt5Core pthread)
    set_target_properties(lab1_emu PROPERTIES LINKER_LANGUAGE CXX)
endif()