set (SOURCES main.c)
set (LIBS supportFiles)

if (BOARD)
    add_executable(lab1.elf ${SOURCES})
    target_link_libraries(lab1.elf ${LIBS})
else()
    add_executable(lab1_emu ${SOURCES})
    target_link_libraries(lab1_emu ${LIBS} ${EMULATOR_LIBS})
    set_target_properties(lab1_emu PROPERTIES LINKER_LANGUAGE CXX)
endif()